# kboy-svn

tags/kboy-0.1/: CAbstraktOptions.cpp  CAbstraktOptionsWidget.cpp  CGBSpiel.cpp  CGnuboyOptions.cpp  CGnuboyOptionsWidget.cpp  CGnuboyOptionsWidget.h  CVBAOptionsWidget.h  MainForm.cpp  kboy.qrc
trunk/: CMakeLists.txt  COPYING  CVBAOptions.cpp  CVBAOptions.h  INSTALL  Makefile  README  TODO  kboy.cpp  kboy.h  kboy.kdev4  kboy.pro  kboy_de.ts  kboy_en.ts  qrc_kboy.cpp
trunk/kboy/: CMakeLists.txt
trunk/res/: kboy.qrc
trunk/src/: CGBGame.hpp  CGBSpielListModel.cpp  CGBSpielListModel.h  CGame.cpp  CGame.hpp  CGameListModel.cpp  CGameListModel.hpp  main.cpp
trunk/src/dao/: IAbstractGameListLoader.hpp  IAbstractGameListWriter.hpp
trunk/src/dao/xml/: CXmlGameListLoader.cpp  CXmlGameListLoader.hpp  CXmlGameListWriter.cpp  CXmlGameListWriter.hpp
trunk/src/emulators/: CAbstractEmulatorOptions.cpp  CAbstractEmulatorOptions.hpp  CAbstraktOptions.h  CAbstraktOptionsWidget.cpp  CAbstraktOptionsWidget.h
trunk/src/emulators/gnuboy/: CGnuboyOptions.cpp  CGnuboyOptions.h  CGnuboyOptions.hpp  CGnuboyOptionsWidget.cpp  CGnuboyOptionsWidget.h  CGnuboyOptionsWidget.hpp
trunk/src/emulators/vba/: CVBAOptions.cpp  CVBAOptions.hpp  CVBAOptionsWidget.cpp  CVBAOptionsWidget.h  CVBAOptionsWidget.hpp
trunk/src/gui/: CMainForm.cpp  CMainForm.hpp  MainForm.h
trunk/translations/: kboy_de.ts
